[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.34", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "uuid",
    "chrono",
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { "version" = "0.4", features = ["serde"] }
